# Voxeloop

./: .gitignore  .gitmodules  .restyled.yaml  CMakeLists.txt  Doxyfile.ini  README.md  imgui.ini  main.cpp
.github/workflows/: clang-format.yml  docs.yml  greetings.yml  test_path.yml
core/audio/: Bindings.cpp  Bindings.hpp
core/include/: AboutState.hpp  Audio.hpp  Common.hpp  CoreEngine.hpp  (+33 more)
docs/: .dummy  AboutState_8cpp.html  AboutState_8cpp__incl.dot  AboutState_8cpp__incl.map  AboutState_8cpp__incl.md5  AboutState_8hpp.html  AboutState_8hpp__dep__incl.dot  AboutState_8hpp__dep__incl.map  AboutState_8hpp__dep__incl.md5  AboutState_8hpp__incl.dot  AboutState_8hpp__incl.map  AboutState_8hpp__incl.md5  AboutState_8hpp_source.html  Audio_8cpp.html  Audio_8cpp__incl.dot  Audio_8cpp__incl.map  Audio_8cpp__incl.md5  Audio_8hpp.html  Audio_8hpp__dep__incl.dot  Audio_8hpp__dep__incl.map  Audio_8hpp__dep__incl.md5  Audio_8hpp__incl.dot  Audio_8hpp__incl.map  Audio_8hpp__incl.md5  Audio_8hpp_source.html  Bindings_8cpp.html  Bindings_8cpp.js  Bindings_8cpp__incl.dot  Bindings_8cpp__incl.map  Bindings_8cpp__incl.md5  Bindings_8hpp.html  Bindings_8hpp.js  Bindings_8hpp__dep__incl.dot  Bindings_8hpp__dep__incl.map  Bindings_8hpp__dep__incl.md5  Bindings_8hpp_source.html  Common_8hpp.html  Common_8hpp.js  Common_8hpp__dep__incl.dot  Common_8hpp__dep__incl.map  (+539 more)
doxygen-custom/: footer.html  header.html
include/: defines.hpp  ebo.hpp  fileHandler.hpp  main.hpp  shader.hpp  vao.hpp  vbo.hpp
src/: ebo.cpp  fileHandler.cpp  main.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
(+152 files in other folders)
